# emp-m2pc

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  circle.yml
bench/: bench_input-check.h  bench_mal2pc.h  input-check-cutoff.cpp  input-check-malicious.cpp  input-check-sig.cpp  mal2pc-comb.cpp  mal2pc.cpp  mal2pc_other.cpp  mal_decompose.cpp  ot_xor_tree.cpp  xor-tree.cpp
malicious/: kot.h  malicious.h  malicious2.h  vot.h  xor_tree_naive.h
test/: bench_mal2pc.h  kot.cpp  mal.cpp  mal2pc-comb.cpp  mal2pc.cpp  mal2pc_other.cpp  mal_decompose.cpp  ot_xor_tree.cpp  sha1.cpp  sha256.cpp  vot.cpp  xor-tree.cpp
